# local-kafka

./: .gitignore  LICENSE  README.md  ex-consume.py  ex-produce.py  pyproject.toml  requirements.txt  setup.py
demo/: README.md  consume.py  data.py  produce.py
hack/: README.md
hack/connect/: mysql_config.json  run.sh  sink_config.json  sink_mysql_config.json  sink_postgress_config copy.json  source_postgress_config.json
hack/mongo/: connector_mongo - consumption schema_config.json  connector_mongo - price schema_config.json
services/: .env-sample  create-data-folders.sh  docker-compose.yml
services/connect/: dockerfile
src/: config.py
src/dsnkafka/: config.py
